kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-buffer-size: "12k"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"

spec:
  tls:
  - hosts:
      # Must match the host in the rules section below
      - botswanaemrdev.intellisoftkenya.com
    secretName: tls-secret
  rules:
  - host: botswanaemrdev.intellisoftkenya.com
    http:
      paths:
      # Auth service
      - path: /auths(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: authservice
            port:
              number: 8081
